--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -2,9 +2,19 @@
     <div class="nav-wrapper">
       <a href="#" class="brand-logo">Logo</a>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
-        <li><a href="sass.html">Sass</a></li>
-        <li><a href="badges.html">Components</a></li>
-        <li><a href="collapsible.html">JavaScript</a></li>
+        
+      {{#if isIndex}}
+      <li class="active"<a href="/">ToDos</a> </li>
+      {{else}}
+      <li> <a href="/">ToDos</a></li>
+      {{/if}}
+
+      {{#if iscCreate}}
+      <li><a href="/create">Create</a></li>
+      {{else}}
+      <li><a href="/create">Create</a></li>
+      {{/if}}
+
       </ul>
     </div>
   </nav>
