--- a/views/create.hbs
+++ b/views/create.hbs
@@ -1,1 +1,10 @@
-<h1>Create Page</h1>
+<form action="/create" method="post">
+<h2>Create ToDo</h2>
+<div>
+    <input id="icon_prefix" type="text" name="title">
+    <label for="icon_prefix">ToDo title</label>
+</div>
+
+<button type="submit" class="waves-effect waves-light btn-large">Create</button>
+
+</form>
