--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,1 +1,25 @@
-<h2> Index Page</h2>
+{{#if todos.length}}
+
+<ul>
+    {{#each todos}}
+    <li class="todo">
+        <form action="/complete" method="post">
+        <label >
+            {{#if complete}}
+            <input type="checkbox" checked name="completed">
+            <span class="completed">{{title}}</span>
+            {{else}}
+            <input type="checkbox" name="completed">
+            <span>{{title}}</span>
+            {{/if}}
+            <input type="hidden" value="{{_id}}" name="id">
+            <button class="btn btn-small" type="submit">Save</button>
+        </label>
+        </form>
+        
+    </li>
+    {{/each}}
+</ul>
+{{else}}
+<p>No Todos!!</p>
+{{/if}}
